// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`----- DataTable Component ----- Base Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="datatable-container"
  >
    <div
      class="datatable-container__inner"
    >
      <header
        class="datatable-header"
      >
        <input
          class="input--sm input"
          id="Search"
          placeholder="Search Data"
          type="text"
          value=""
        />
      </header>
      <table
        class="datatable"
      >
        <thead>
          <tr
            class="datatable-body-header"
          >
            <th
              class="datatable-body-header__item"
            >
              First Test Column
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="datatable-body-header__item"
            >
              First Test Column
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`----- DataTable Component ----- Hides DataTableHeader 1`] = `
<DocumentFragment>
  <div
    class="datatable-container"
  >
    <div
      class="datatable-container__inner"
    >
      <table
        class="datatable"
      >
        <thead>
          <tr
            class="datatable-body-header"
          >
            <th
              class="datatable-body-header__item"
            >
              First Test Column
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="datatable-body-header__item"
            >
              First Test Column
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
